--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "@anthropic-ai/sdk": "^0.14.1",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
+    "@react-google-maps/api": "^2.18.1",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@react-three/drei": "^11.3.0",
+    "@react-three/fiber": "^9.6.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
@@ -20,27 +24,23 @@
     "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "uuid": "^9.0.0",
-
-    "@reduxjs/toolkit": "^1.9.5",
-    "react-redux": "^8.1.2",
-
-    "@react-google-maps/api": "^2.18.1"
+    "three": "^0.154.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
+    "@types/react-redux": "^7.1.25",
     "@types/uuid": "^9.0.0",
     "autoprefixer": "^10.4.18",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.1.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3",
-
-    "@types/react-redux": "^7.1.25"
+    "typescript": "^5.3.3"
   }
 }
