--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react-redux": "^8.1.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.154.0",
+    "three": "^0.159.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
@@ -36,6 +36,7 @@
     "@types/react-dom": "^18.2.19",
     "@types/react-redux": "^7.1.25",
     "@types/uuid": "^9.0.0",
+    "@types/three": "^0.159.0",
     "autoprefixer": "^10.4.18",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.1.0",
