--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
+    "react-window": "^1.8.10",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.159.0",
@@ -38,6 +39,7 @@
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
     "@types/react-redux": "^7.1.25",
+    "@types/react-window": "^1.8.8",
     "@types/three": "^0.159.0",
     "@types/uuid": "^9.0.0",
     "autoprefixer": "^10.4.18",
