--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@react-three/fiber": "^8.15.12",
     "@react-three/postprocessing": "^2.15.1",
     "@reduxjs/toolkit": "^1.9.5",
-    "@tanstack/react-virtual": "^3.0.1",
+    "@swc/core": "^1.4.2",
+    "@swc/helpers": "^0.5.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
