--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@swc/core": "^1.4.2",
     "@swc/helpers": "^0.5.6",
+    "@yudiel/react-qr-scanner": "^2.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
@@ -30,7 +31,6 @@
     "postprocessing": "^6.34.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-qr-reader": "^3.0.0",
     "react-redux": "^8.1.2",
     "react-window": "^1.8.10",
     "tailwind-merge": "^2.2.1",
