--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
+    "firebase": "^11.2.0",
     "framer-motion": "^11.0.8",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.344.0",
