--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,37 +2,50 @@
   "compilerOptions": {
     // Target modern or a suitable ES standard
     "target": "ES2022",
+    // Libraries you'll use (DOM, ESNext, etc.)
     "lib": ["dom", "dom.iterable", "esnext"],
+    // Allow JS in your project if needed
     "allowJs": true,
+    // Skips type-checking of d.ts files from libraries
     "skipLibCheck": true,
+    // Enable all strict type-checking options
     "strict": true,
+    // No compiled output in a Next.js project (handled by Next)
     "noEmit": true,
+    // Allows default imports from modules with no default export
     "esModuleInterop": true,
-    // Next.js typically defaults to "bundler" resolution in latest versions
+    // Use the most modern module system supported by Next
     "module": "esnext",
+    // For Next.js 13+, bundler-based resolution can work well
     "moduleResolution": "bundler",
+    // Resolve JSON files
     "resolveJsonModule": true,
+    // Treat each file as a separate module
     "isolatedModules": true,
-    "jsx": "preserve",
+    // Keep track of changes in incremental builds
     "incremental": true,
 
-    // Next.js plugin
+    // Next.js-specific TypeScript plugin
     "plugins": [
       {
         "name": "next"
       }
     ],
 
-    // Path alias if you use @/* => ./src/*
+    // Example path alias to reference files with @/*
     "paths": {
       "@/*": ["./src/*"]
     }
   },
+  // You MUST include your custom .d.ts files so TypeScript can see them
   "include": [
     "next-env.d.ts",
+    // Our custom global types folder
+    "src/types/**/*.d.ts",
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
   ],
+  // Exclude node_modules (typical in most projects)
   "exclude": ["node_modules"]
 }
