--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
   },
   "include": [
     "next-env.d.ts",
-    "src/types/**/*.d.ts", // <-- important: include global.d.ts
+    "src/types/*.d.ts", 
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
