--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@anthropic-ai/sdk": "^0.14.1",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
     "@react-google-maps/api": "^2.18.1",
     "@react-three/drei": "^9.92.7",
@@ -23,6 +24,7 @@
     "@yudiel/react-qr-scanner": "^2.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cmdk": "^0.2.1",
     "date-fns": "^3.3.1",
     "firebase": "^11.2.0",
     "framer-motion": "^11.0.8",
