--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@react-three/fiber": "^8.15.12",
     "@react-three/postprocessing": "^2.15.1",
     "@reduxjs/toolkit": "^1.9.5",
+    "@stripe/stripe-js": "^2.4.0",
+    "@stripe/react-stripe-js": "^2.4.0",
     "@swc/core": "^1.4.2",
     "@swc/helpers": "^0.5.6",
     "@yudiel/react-qr-scanner": "^2.0.1",
@@ -36,6 +38,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
     "react-window": "^1.8.10",
+    "stripe": "^14.14.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.159.0",
