--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cmdk": "^0.2.1",
     "date-fns": "^3.3.1",
     "firebase": "^11.2.0",
+    "firebase-admin": "^11.11.0",
     "framer-motion": "^11.0.8",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.344.0",
