--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@react-google-maps/api": "^2.18.1",
     "@react-three/drei": "^9.92.7",
     "@react-three/fiber": "^8.15.12",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
     "@react-three/postprocessing": "^2.15.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@stripe/stripe-js": "^2.4.0",
