--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "bundler", // or "node"
+    // "moduleResolution": "bundler", // Some Next.js users switch to "node" or "node16".
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
@@ -24,7 +24,8 @@
   },
   "include": [
     "next-env.d.ts",
-    "src/types/*.d.ts", 
+    // Include *all* d.ts in src (instead of just src/types/*.d.ts)
+    "src/**/*.d.ts", 
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
