--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "firebase": "^11.2.0",
     "firebase-admin": "^11.11.0",
     "framer-motion": "^11.0.8",
+    "gle-gaussian-splat-3d": "^1.0.19",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.344.0",
     "next": "14.1.0",
