--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@anthropic-ai/sdk": "^0.14.1",
     "@googlemaps/three": "^4.0.13",
     "@googlemaps/js-api-loader": "^1.16.8",
+    "@mkkellogg/gaussian-splats-3d": "^0.4.7",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-popover": "^1.0.7",
