--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
+    "cors": "^2.8.5",
     "date-fns": "^3.3.1",
     "firebase": "^11.2.0",
     "firebase-admin": "^11.11.0",
