--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-player": "^2.16.0",
     "react-redux": "^8.1.2",
     "react-window": "^1.8.10",
     "stripe": "^14.14.0",
