--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-player": "^2.16.0",
     "react-redux": "^8.1.2",
     "react-window": "^1.8.10",
+    "react-spring-bottom-sheet": "^3.4.1",
     "stripe": "^14.14.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
