--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-player": "^2.16.0",
     "react-redux": "^8.1.2",
     "react-window": "^1.8.10",
+    "react-window-infinite-loader": "^1.0.10",
     "react-spring-bottom-sheet": "^3.4.1",
     "stripe": "^14.14.0",
     "tailwind-merge": "^2.2.1",
