--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.160.0",
+    "three.meshline": "^1.4.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
