--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "stripe": "^14.14.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "tesseract.js": "^6.0.0",
     "three": "^0.160.0",
     "three.meshline": "^1.4.0",
     "uuid": "^9.0.0"
