--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@stripe/stripe-js": "^2.4.0",
     "@swc/core": "^1.4.2",
     "@swc/helpers": "^0.5.6",
+    "@types/mapbox-gl": "^3.4.1",
     "@yudiel/react-qr-scanner": "^2.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -38,6 +39,7 @@
     "framer-motion": "^11.0.8",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.344.0",
+    "mapbox-gl": "^3.10.0",
     "next": "14.1.0",
     "postprocessing": "^6.34.1",
     "react": "^18.2.0",
