--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@react-google-maps/api": "^2.18.1",
     "@react-three/drei": "^9.92.7",
     "@react-three/fiber": "^8.15.12",
@@ -29,7 +30,7 @@
     "@swc/helpers": "^0.5.6",
     "@types/mapbox-gl": "^3.4.1",
     "@yudiel/react-qr-scanner": "^2.0.1",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
     "cors": "^2.8.5",
