--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.344.0",
     "mapbox-gl": "^3.10.0",
+    "motion": "^12.4.10",
     "next": "14.1.0",
     "postprocessing": "^6.34.1",
     "react": "^18.2.0",
