--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@stripe/stripe-js": "^2.4.0",
     "@swc/core": "^1.4.2",
     "@swc/helpers": "^0.5.6",
+    "@techstark/opencv-js": "^4.10.0-release.1",
     "@types/mapbox-gl": "^3.4.1",
     "@yudiel/react-qr-scanner": "^2.0.1",
     "class-variance-authority": "^0.7.1",
