--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-redux": "^8.1.2",
     "react-window": "^1.8.10",
     "react-window-infinite-loader": "^1.0.10",
+    "redux-persist": "^6.0.0",
     "request": "^2.88.2",
     "react-spring-bottom-sheet": "^3.4.1",
     "sonner": "^2.0.1",
