--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "next": "14.1.0",
     "postprocessing": "^6.34.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-player": "^2.16.0",
