--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@swc/helpers": "^0.5.6",
     "@techstark/opencv-js": "^4.10.0-release.1",
     "@types/mapbox-gl": "^3.4.1",
+    "@types/qrcode": "^1.5.5",
     "@yudiel/react-qr-scanner": "^2.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.0",
@@ -45,6 +46,7 @@
     "motion": "^12.4.10",
     "next": "14.1.0",
     "postprocessing": "^6.34.1",
+    "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
