--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "firebase": "^11.2.0",
     "firebase-admin": "^11.11.0",
     "framer-motion": "^11.0.8",
+    "jspdf": "^3.0.0",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.344.0",
     "mapbox-gl": "^3.10.0",
