--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "tesseract.js": "^6.0.0",
     "three": "^0.160.0",
     "three.meshline": "^1.4.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/lodash.debounce": "^4.0.9",
