--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@techstark/opencv-js": "^4.10.0-release.1",
     "@types/mapbox-gl": "^3.4.1",
     "@types/qrcode": "^1.5.5",
+    "@vercel/analytics": "^1.5.0",
     "@yudiel/react-qr-scanner": "^2.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.0",
