--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@swc/core": "^1.4.2",
     "@swc/helpers": "^0.5.6",
     "@techstark/opencv-js": "^4.10.0-release.1",
+    "@tweenjs/tween.js": "^25.0.0",
     "@types/mapbox-gl": "^3.4.1",
     "@types/qrcode": "^1.5.5",
     "@vercel/analytics": "^1.5.0",
