--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-intersection-observer": "^9.16.0",
     "react-player": "^2.16.0",
     "react-redux": "^8.1.2",
     "react-window": "^1.8.10",
