--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.14.1",
-    "@googlemaps/three": "^4.0.13",
-    "@lumaai/luma-web": "^0.2.2",
     "@googlemaps/js-api-loader": "^1.16.8",
+    "@googlemaps/three": "^4.0.13",
     "@hugeicons/react-pro": "^0.3.2",
+    "@lumaai/luma-web": "^0.2.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.1.2",
@@ -37,6 +37,7 @@
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "@yudiel/react-qr-scanner": "^2.0.1",
+    "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
@@ -60,17 +61,16 @@
     "react-intersection-observer": "^9.16.0",
     "react-player": "^2.16.0",
     "react-redux": "^8.1.2",
+    "react-spring-bottom-sheet": "^3.4.1",
     "react-window": "^1.8.10",
     "react-window-infinite-loader": "^1.0.10",
     "redux-persist": "^6.0.0",
     "request": "^2.88.2",
-    "react-spring-bottom-sheet": "^3.4.1",
     "sonner": "^2.0.1",
     "stripe": "^14.14.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "tencentcloud-sdk-nodejs-intl-en": "^3.0.1122",
-    "tesseract.js": "^6.0.0",
     "three": "^0.160.0",
     "three.meshline": "^1.4.0",
     "uuid": "^9.0.0",
@@ -88,8 +88,10 @@
     "autoprefixer": "^10.4.18",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.1.0",
+    "firebase-functions": "^6.3.2",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
+    "tesseract.js": "^6.0.0",
     "typescript": "^5.3.3"
   }
 }
