--- a/package.json
+++ b/package.json
@@ -87,7 +87,9 @@
     "autoprefixer": "^10.4.18",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.1.0",
+    "file-loader": "^6.2.0",
     "firebase-functions": "^6.3.2",
+    "next-pwa": "^5.6.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "tesseract.js": "^6.0.0",
