--- a/vercel.json
+++ b/vercel.json
@@ -13,7 +13,7 @@
     "crons": [
     {
       "path": "/api/cars",
-      "schedule": "*/5 * * * *"
+      "schedule": "5 0 * * * *"
     }
   ]
 }
