--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@stripe/react-stripe-js": "^2.4.0",
     "@stripe/stripe-js": "^2.4.0",
+    "@supabase/supabase-js": "^2.49.4",
     "@swc/core": "^1.4.2",
     "@swc/helpers": "^0.5.6",
     "@techstark/opencv-js": "^4.10.0-release.1",
